--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-NODE_ENV=development
-PORT=5000
+NODE_ENV=""
+PORT=
 
-DATABASE_URL=mysql://root:${MYSQL_ROOT_PASSWORD}@localhost:3306/digiwallet?schema=public
+DATABASE_URL=""
 
-MYSQL_ROOT_PASSWORD="YOUR MYSQL ROOT PASSWORD"
+MYSQL_ROOT_PASSWORD=""
+
+OTP_HASH=""
+JWT_SECRET=""
+
+SMTP_HOST=""
+SMTP_PORT=
+SMTP_USER=""
+SMTP_PASSWORD=""
