--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
 	"license": "ISC",
 	"dependencies": {
 		"@prisma/client": "^5.7.0",
+		"cloudinary": "^1.41.0",
 		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"jimp": "^0.22.10",
+		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.9.7",
 		"swagger-ui-express": "^5.0.0",
 		"yaml": "^2.3.4",
 		"zod": "^3.22.4"
@@ -26,6 +31,7 @@
 		"@types/cookie-parser": "^1.4.6",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.0",
+		"@types/nodemailer": "^6.4.14",
 		"@types/swagger-ui-express": "^4.1.6",
 		"nodemon": "^3.0.1",
 		"prisma": "^5.7.0",
